--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -87,7 +87,13 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="MessageReceiveEventArgs.cs" />
+    <Compile Include="EventHandling\MessageReceiveEventArgs.cs" />
+    <Compile Include="MainPage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MainPage.Designer.cs">
+      <DependentUpon>MainPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\EMG.cs" />
     <Compile Include="Models\Finger.cs" />
     <Compile Include="Models\Glove.cs" />
@@ -101,9 +107,12 @@
     <Compile Include="TcpConfig.Designer.cs">
       <DependentUpon>TcpConfig.cs</DependentUpon>
     </Compile>
-    <Compile Include="TCP_Communication.cs" />
+    <Compile Include="Network\TCP_Communication.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MainPage.resx">
+      <DependentUpon>MainPage.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -113,6 +122,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <EmbeddedResource Include="TcpConfig.resx">
       <DependentUpon>TcpConfig.cs</DependentUpon>
@@ -147,6 +157,18 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\emgMouseEnter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8_RFID_Sensor_30px_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\HandMouseEnter.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GloveMouseEnter.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
