--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -201,6 +201,9 @@
   <ItemGroup>
     <None Include="Resources\GloveMouseEnter.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\icons8_Camera_on_Tripod_40px_1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
